# vivado-mcp-server

./: .gitignore  README.md  TODO.md  _live_test.py  pyproject.toml
.tmp/: mcp_test_constraints_after_patch.xdc  mcp_test_constraints_default.xdc  mcp_test_exceptions_after_patch.txt  mcp_test_fanout.txt  mcp_test_installed_exceptions.txt  mcp_test_installed_xdc.xdc  mcp_test_io.txt  mcp_test_methodology.txt
install/: install_codex_windows.ps1  install_windows.ps1  mcp_config_example.json
python/: config.py  server.py
python/tools/: __init__.py  constraints.py  hardware.py  implementation.py  netlist.py  project.py  reports.py  runs.py  synthesis.py
python/vivado/: __init__.py  client.py  protocol.py
python/vivado_mcp_server/: __init__.py  __main__.py  config.py  server.py
python/vivado_mcp_server/tools/: __init__.py  constraints.py  hardware.py  implementation.py  netlist.py  project.py  reports.py  runs.py  synthesis.py
python/vivado_mcp_server/vivado/: __init__.py  client.py  exceptions.py
tcl/: vivado_server.tcl
tcl/handlers/: constraints.tcl  hardware.tcl  implementation.tcl  netlist.tcl  project.tcl  reports.tcl  runs.tcl  runs_common.tcl  synthesis.tcl
tcl/lib/: json.tcl  logger.tcl
tcl/server/: core.tcl  dispatcher.tcl  protocol.tcl
tests/: conftest.py  test_client.py  test_config.py  test_protocol.py
